--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ bin
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+#env files
+.env
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
