--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,3 +45,12 @@ jobs:
 
       - name: Test
         run: make test
+        env:
+          APP_ADDRESS: ${{ vars.APP_ADDRESS }}
+          APP_PORT: ${{ vars.APP_PORT }}
+          DB_DRIVER: ${{ vars.DB_DRIVER }}
+          REDIS_ADDRESS: ${{ vars.REDIS_ADDRESS }}
+          REDIS_PORT: ${{ vars.REDIS_PORT }}
+          REDIS_PASSWORD: ${{ vars.REDIS_PASSWORD }}
+          REDIS_DB: ${{ vars.REDIS_DB }}
+          DB_SOURCE: ${{ secrets.DB_SOURCE }}
