--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,9 @@ jobs:
       - name: Run migrations
         run: make migrateup
 
+      - name: Create .env file
+        run: touch .env
+
       - name: Test
         run: make test
         env:
