--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -8,7 +8,11 @@ sql:
     gen:
       go:
         package: "db"
+        sql_package: "pgx/v5"
         out: "./db/sqlc"
         emit_empty_slices: true
         emit_json_tags: true
         json_tags_case_style: camel
+        overrides:
+          - db_type: "timestamptz"
+            go_type: "time.Time"
